[gd_scene load_steps=3 format=2]

[ext_resource path="res://rtsControl.gd" type="Script" id=1]

[sub_resource type="CubeMesh" id=1]

custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
flip_faces = false
size = Vector3( 0.2, 0.2, 0.2 )
subdivide_width = 0
subdivide_height = 0
subdivide_depth = 0

[node name="rtsControl" type="Spatial" index="0"]
script = ExtResource( 1 )
_sections_unfolded = [ "Pause", "Transform", "Visibility" ]

[node name="ray_down" type="RayCast" parent="." index="0"]
enabled = true
exclude_parent = true
cast_to = Vector3( 0, -100, 0 )
collision_mask = 1

[node name="cam_up_down_rot" type="Spatial" parent="." index="1"]

[node name="camera" type="Camera" parent="cam_up_down_rot" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8.1183, 15.6222 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = false
fov = 70.0
size = 1.0
near = 0.05
far = 100.0

[node name="ray_click" type="RayCast" parent="cam_up_down_rot/camera" index="0"]
enabled = true
exclude_parent = true
cast_to = Vector3( 0, 0, -100 )
collision_mask = 1

[node name="Spatial" type="Spatial" parent="cam_up_down_rot/camera" index="1"]
_sections_unfolded = [ "Transform" ]

[node name="MeshInstance" type="MeshInstance" parent="cam_up_down_rot/camera/Spatial" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -31.3699 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 1 )
skeleton = NodePath("..")
material/0 = null
_sections_unfolded = [ "mesh" ]

[node name="tween" type="Tween" parent="." index="2"]
repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

